k8s/order-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: order-service
  namespace: cloudshop

spec:
  type: ClusterIP

  selector:
    app: order-service

  ports:
    - protocol: TCP
      port: 5001
      targetPort: 5001
