k8s/product-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: product-service
  namespace: cloudshop

spec:
  type: ClusterIP

  selector:
    app: product-service

  ports:
    - protocol: TCP
      port: 5000
      targetPort: 5000
