k8s/cloudshop-ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: cloudshop-ingress
  namespace: cloudshop
  annotations:
    nginx.ingress.kubernetes.io/rewrite-target: /$1

spec:
  ingressClassName: nginx
  rules:
    - http:
        paths:

          - path: /api/(products)
            pathType: ImplementationSpecific
            backend:
              service:
                name: product-service
                port:
                  number: 5000

          - path: /api/(orders)
            pathType: ImplementationSpecific
            backend:
              service:
                name: order-service
                port:
                  number: 5001

          - path: /(.*)
            pathType: ImplementationSpecific
            backend:
              service:
                name: frontend
                port:
                  number: 8080
